<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mybaseproject2.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mybaseproject2.fragments.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mybaseproject2.fragments.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mybaseproject2.fragments.profile.Profile"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mybaseproject2.fragments.dashboard.DashBoard"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dash_board" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mybaseproject2.fragments.notifications.Notifications"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>